# Order_bot

./: .gitignore  main.py  pyproject.toml  test.py  test_agent.py
alembic/: env.py
alembic/versions/: 3f83baaf2576_initial_schema.py
src/: agent_core.py  app.py  bot.py  cloud_memory.py  models.py  product_list.json  products.py  schemas.py  security.py  seed_database.py  tools.py  whatsapp.py  wp_webhook.md
tests/: test_supabase.py
