[project]
name = "backend-21"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "httpx>=0.28.1",
    "ngrok>=1.7.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
