[project]
name = "backend-21"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "modal>=1.5.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
